# deals-vectoriser

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: crontab.example
scripts/: run.sh
src/deals_vectoriser/: __init__.py  config.py  deal_text.py  discover.py  embed.py  enrich.py  parse.py  run.py  search.py  sec_client.py  stage1_fetch.py  stage2_load.py  stage3_embed.py  store.py  tui.py
supabase/migrations/: 0001_extensions.sql  0002_tables.sql  0003_rls.sql  0004_match_function.sql  0005_match_filters.sql  0006_drop_old_match_overload.sql  0007_match_offset.sql
